--- a/Pages/Blog Pages/Blog Template copy 3.html
+++ b/Pages/Blog Pages/Blog Template copy 3.html
@@ -11,31 +11,9 @@
     />
     <title>Blog Page</title>
   </head>
+ 
   <body>
-    <nav>
-      <div class="left">
-        <div class="logo">
-          <img src="/Assets/Images/GRINDS SCHOOL LOGO Final (1) crop.png" />
-        </div>
-        <div class="links">
-          <a href="/Pages/index.html">Home</a>
-          <a href="/Pages/Grinds.html">Grinds</a>
-          <a href="/Pages/Courses.html">Courses</a>
-          <a href="/Pages/Blog Pages/Landing Page.html">Blog</a>
-          <a href="#">Youtube</a>
-          <a href="/Pages/About Us.html">About Us</a>
-          <a href="/Pages/Contact Us.html">Contact Us</a>
-        </div>
-      </div>
-
-      <div class="buttons">
-        <a href="/Other/Support.html"><i class="bx bx-support"></i></a>
-        <a href="#"><i class="bx bx-basket"></i></a>
-        <a href="/Pages/ASMR Prog - Login Page/login.html"
-          ><i class="bx bxs-user"></i
-        ></a>
-      </div>
-    </nav>
+    <div data-include="/Includes/nav.html"></div>
     <div class="container">
       <header>
         <div class="category" STRESS></div>
@@ -81,76 +59,7 @@
         </blockquote>
       </article>
     </div>
-    <footer>
-      <div class="columns">
-        <div class="col">
-          <h5>Contact Information</h5>
-          <ul class="contact_details">
-            <li>
-              <i class="bx bxs-phone"></i>
-              <h5>+353 851193536</h5>
-            </li>
-            <li>
-              <i class="bx bx-envelope"></i>
-              <h5 class="email">eoghanmurphhy@gmail.com</h5>
-            </li>
-            <li>
-              <i class="bx bx-map"></i>
-              <h5>Blessington, Wicklow, Ireland</h5>
-            </li>
-          </ul>
-          <a class="contactusfooter" href="/Pages/Contact Us.html">Contact Us</a>
-        </div>
-        <div class="col">
-          <h5>Site Links</h5>
-          <a href="/Pages/index.html">Home</a>
-          <a href="/Pages/About Us.html">About Us</a>
-          <a href="/Pages/Contact Us.html">Grinds</a>
-          <a href="/Pages/Courses.html">Courses</a>
-          <a href="/Pages/Blog Pages/Landing Page.html">Blog</a>
-        </div>
-        <div class="col">
-          <h5>Other Links</h5>
-          <a href="#">FAQS</a>
-          <a href="#">Privacy Policy</a>
-          <a href="#">Terms of Service</a>
-          <a href="#">Cookies</a>
-          <a href="#">Support</a>
-        </div>
-        <div class="col">
-          <h5>Collaboration</h5>
-          <a href="#">Work With Us</a>
-          <a href="#">Affiliate</a>
-        </div>
-        <div class="col last">
-          <h5>Sign Up to Our Weekly Newsletter</h5>
-          <p>Hear about our latest Blog and Upcoming Courses/Events!</p>
-          <div class="form2">
-            <form
-          action="https://formspree.io/f/mjvndlpa"
-          method="POST"
-          class="contact__form2">
-          <input
-            type="email"
-            name="Email Address"
-            placeholder="Your Email Address"
-            required
-          />
-          <button type="submit" class="btn btn-primary">Sign Up</button>
-          </div>
-
-          <h5 class="Socialsfooter">Socials</h5>
-          <div class="social-links">
-            <a href="#"><i class="bx bxl-instagram"></i></a>
-            <a href="#"><i class="bx bxl-youtube"></i></a>
-            <a href="#"><i class="bx bxl-linkedin-square"></i></a>
-          </div>
-        </div>
-      </div>
-      <div class="copyright">
-        <img src="/Assets/Images/GRINDS SCHOOL LOGO Final (1) crop.png">
-        <p>Copyright © 2024 Level Up Institute, All Rights Reserved.</p>
-      </div>
-    </footer>
+    <div data-include="/Includes/Footer.html"></div>
+  <script src="/JavaScript/include.js" defer></script>
   </body>
 </html>
