--- a/Pages/ReviewsRecom.html
+++ b/Pages/ReviewsRecom.html
@@ -7,42 +7,18 @@
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/Assets/CSS/Homepage.css" />
     <link rel="stylesheet" href="/Assets/CSS/Template.css" />
+    <link rel="stylesheet" href="/Assets/CSS/Homepage.css" />
+    <script src="/JavaScript/include.js" defer></script>
     <title>Reviews | Level Up Institute</title>
   </head>
   <body>
-    <nav>
-      <div class="left">
-        <div class="logo">
-          <img src="/Assets/Images/GRINDS SCHOOL LOGO Final (1) crop.png" />
-        </div>
-        <div class="links">
-          <a href="/Pages/index.html">Home</a>
-          <a href="/Pages/Grinds.html">Grinds</a>
-          <a href="/Pages/Courses.html">Courses</a>
-          <a href="/Pages/Blog Pages/Blog Landing Page.html">Blog</a>
-          <a href="#">Youtube</a>
-          <a href="/Pages/About Us.html">About Us</a>
-          <a href="/Pages/Contact Us.html">Contact Us</a>
-        </div>
-      </div>
-
-      <div class="buttons">
-        <a href="/Other/Support.html"><i class="bx bx-support"></i></a>
-        <a href="#"><i class="bx bx-basket"></i></a>
-        <a href="/Pages/ASMR Prog - Login Page/login.html"
-          ><i class="bx bxs-user"></i
-        ></a>
-      </div>
-    </nav>
+    <div data-include="/Includes/nav.html"></div>
 
     <div class="content">
       <div class="separator">
         <h2><span>Student Reviews & Recommendations</span></h2>
-        <a href="/Pages/index.html"
-          ><i class="bx bx-chevron-left"></i>Go Back</a
-        >
+        <!-- <a href="/Pages/index.html"><i class="bx bx-chevron-left"></i>Go Back</a> -->
       </div>
       <div class="hear">
         <h5>
@@ -88,7 +64,7 @@
             </div>
           </div>
           <div class="item">
-            <h5>Luke Callaghan - LC OL Student</h5>
+            <h5>Luke - LC OL Student</h5>
             <p>
               I find that Eóghan explains the Maths questions with more detail
               and time rather than a school teacher who speeds along without
@@ -107,27 +83,15 @@
               <span class="star active"></span>
             </div>
           </div>
-        </div>
-      </div>
-
-      <!--<div class="hear">
-        <h5>
-          <span>Hear what People Say About Us! </span>Also you can contact us
-          for more info!
-        </h5>
-      </div>
-
-      <div class="comments">
-        <div class="right">
           <div class="item">
-            <h5>Alison, Mother of Hannah - JC OL Student</h5>
+            <h5>Kieran - LC OL Student</h5>
             <p>
-              Eóghan has been so helpful in helping my Hannah to achieve better
-              grades in Maths. Hannah has gone from failing maths to getting an
-              honour in less than 6 weeks. Eóghan is very patient and makes
-              maths a lot easier for Hannah to understand. Thanks Eóghan.
+              Eóghan was a brilliant tutor, he made a plan for me at the start for certain topics and we succeeded with that plan.
+              He also helped me with my confidence in maths and made me solve most of the questions myself.
+              He is a truly gifted teacher and I found his methods to work very well.
             </p>
             <div class="rating">
+              <!-- Five stars -->
               <span class="star active"></span>
               <span class="star active"></span>
               <span class="star active"></span>
@@ -136,33 +100,12 @@
             </div>
           </div>
           <div class="item">
-            <h5>Jan - LC HL Student</h5>
+            <h5>Luke  - LC HL Student</h5>
             <p>
-              Eóghan is a very dedicated, patient and adaptable tutor. He has
-              greatly improved my results and understanding in various Maths
-              topics already. I would definitely recommend him to anyone looking
-              to accelerate their learning for the Leaving Cert.
+              Eóghan was a great teacher who helped me greatly in HL maths. In the space of a month I went from badly failing, to a h5 standard. He was very clear when explaining everything and extremely helpful.
             </p>
             <div class="rating">
-              <span class="star active"></span>
-              <span class="star active"></span>
-              <span class="star active"></span>
-              <span class="star active"></span>
-              <span class="star active"></span>
-            </div>
-          </div>
-          <div class="item">
-            <h5>Luke Callaghan - LC OL Student</h5>
-            <p>
-              I find that Eóghan explains the Maths questions with more detail
-              and time rather than a school teacher who speeds along without
-              making sure you know how to do the sum properly. He also goes at
-              the speed you want to go and so this makes learning and doing the
-              sums 10 times easier. I will continue to use Eóghan for grinds as
-              he knows his formulas and how to teach them. Thank you Eóghan for
-              all your help.
-            </p>
-            <div class="rating">
+              <!-- Five stars -->
               <span class="star active"></span>
               <span class="star active"></span>
               <span class="star active"></span>
@@ -171,78 +114,8 @@
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
     </div>
-    <footer>
-      <div class="columns">
-        <div class="col">
-          <h5>Contact Information</h5>
-          <ul class="contact_details">
-            <li>
-              <i class="bx bxs-phone"></i>
-              <h5>+353 851193536</h5>
-            </li>
-            <li>
-              <i class="bx bx-envelope"></i>
-              <h5 class="email">eoghanmurphhy@gmail.com</h5>
-            </li>
-            <li>
-              <i class="bx bx-map"></i>
-              <h5>Blessington, Wicklow, Ireland</h5>
-            </li>
-          </ul>
-          <a class="contactusfooter" href="/Pages/Contact Us.html">Contact Us</a>
-        </div>
-        <div class="col">
-          <h5>Site Links</h5>
-          <a href="/Pages/index.html">Home</a>
-          <a href="/Pages/About Us.html">About Us</a>
-          <a href="/Pages/Contact Us.html">Grinds</a>
-          <a href="/Pages/Courses.html">Courses</a>
-          <a href="/Pages/Blog Pages/Landing Page.html">Blog</a>
-        </div>
-        <div class="col">
-          <h5>Other Links</h5>
-          <a href="#">FAQS</a>
-          <a href="#">Privacy Policy</a>
-          <a href="#">Terms of Service</a>
-          <a href="#">Cookies</a>
-          <a href="#">Support</a>
-        </div>
-        <div class="col">
-          <h5>Collaboration</h5>
-          <a href="#">Work With Us</a>
-          <a href="#">Affiliate</a>
-        </div>
-        <div class="col last">
-          <h5>Sign Up to Our Weekly Newsletter</h5>
-          <p>Hear about our latest Blog and Upcoming Courses/Events!</p>
-          <div class="form2">
-            <form
-          action="https://formspree.io/f/mjvndlpa"
-          method="POST"
-          class="contact__form2">
-          <input
-            type="email"
-            name="Email Address"
-            placeholder="Your Email Address"
-            required
-          />
-          <button type="submit" class="btn btn-primary">Sign Up</button>
-          </div>
-
-          <h5 class="Socialsfooter">Socials</h5>
-          <div class="social-links">
-            <a href="#"><i class="bx bxl-instagram"></i></a>
-            <a href="#"><i class="bx bxl-youtube"></i></a>
-            <a href="#"><i class="bx bxl-linkedin-square"></i></a>
-          </div>
-        </div>
-      </div>
-      <div class="copyright">
-        <img src="/Assets/Images/GRINDS SCHOOL LOGO Final (1) crop.png">
-        <p>Copyright © 2024 Level Up Institute, All Rights Reserved.</p>
-      </div>
-    </footer>
+    <div data-include="/Includes/Footer.html"></div>
   </body>
 </html>
