--- a/Pages/attributions.html
+++ b/Pages/attributions.html
@@ -1,127 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/Assets/CSS/Template.css" />
-    <link rel="stylesheet" href="/Assets/CSS/attributions.css" />
-    <title>Attributions | Level Up Institute</title>
-</head>
-<body>
-    <nav>
-        <div class="left">
-            <div class="logo">
-                <img src="/Assets/Images/GRINDS SCHOOL LOGO Final (1) crop.png" />
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+        <link rel="stylesheet" href="/Assets/CSS/Template.css" />
+        <link rel="stylesheet" href="/Assets/CSS/attributions.css" />
+        <script src="/JavaScript/include.js" defer></script> 
+        <title>Attributions | Level Up Institute</title>
+    </head>
+    <body>
+        <div data-include="/Includes/nav.html"></div>
+        <div class="container">
+            <header class="header2">
+            <div class="info">
+                <h3 class="title">Attributions to those whose Images I have used</h3>
+                <p>Thank you</p>
             </div>
-            <div class="links">
-                <a href="/Pages/index.html">Home</a>
-                <a href="/Pages/Contact Us.html">Grinds</a>
-                <a href="/Pages/Courses.html">Courses</a>
-                <a href="/Pages/Blog Pages/Landing Page.html">Blog</a>
-                <a href="#">Youtube</a>
-                <a href="/Pages/About Us.html">About Us</a>
-                <a href="/Pages/Contact Us.html">Contact Us</a>
-            </div>
+            </header>
+            <article>
+            <!--<a href="http://www.freepik.com">Designed by vectorjuice / Freepik</a>-->
+            <h4>Home Page</h4>
+            <p><a href="https://www.freepik.com/free-photo/3d-student-graduation-cap-books-stack_33062162.htm#fromView=search&page=1&position=8&uuid=1c020893-f12a-4929-a0d9-84efbf711699">Image by upklyak on Freepik</a></p>
+            <p><a href="https://www.freepik.com/free-vector/goal-achievement-career-promotion-school-graduation-educational-trajectory-educational-capital-strategy-determine-your-educational-way-concept-pinkish-coral-bluevector-isolated-illustration_11663363.htm#query=learning&position=31&from_view=author&uuid=55285b5d-7482-40c2-ba5d-3039bf4c50f1">Image by vectorjuice on Freepik</a></p>
+            <h4>Blog</h4>
+            <p>Time Management: Photo by <a href="https://unsplash.com/@aronvisuals?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Aron Visuals</a> on <a href="https://unsplash.com/photos/selective-focus-photo-of-brown-and-blue-hourglass-on-stones-BXOXnQ26B7o?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+            <p>Study: Photo by <a href="https://unsplash.com/@aaronburden?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Aaron Burden</a> on <a href="https://unsplash.com/photos/opened-book-QJDzYT_K8Xg?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+            <p>Stress: Photo by <a href="https://unsplash.com/@punttim?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Tim Gouw</a> on <a href="https://unsplash.com/photos/man-wearing-white-top-using-macbook-1K9T5YiZ2WU?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+            <p>Learning: Photo by <a href="https://unsplash.com/@fakurian?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Milad Fakurian</a> on <a href="https://unsplash.com/photos/blue-and-green-peacock-feather-58Z17lnVS4U?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
+            <h4>About the Tutor</h4>
+            <p><a href="https://www.freepik.com/free-vector/qualification-increase-course-skills-improvement-coaching_12085914.htm#fromView=author&page=1&position=1&uuid=d8b2747f-9ae9-4a99-8325-3863fb2eb4ab">Image by vectorjuice on Freepik</a></p>
+            <h4>Contact Us</h4>
+            <p><a href="https://www.freepik.com/free-vector/contact-center-abstract-concept_12084824.htm#query=contact&position=1&from_view=author&uuid=d6363a94-f62e-43c1-a760-4aab21d42ee2">Image by vectorjuice on Freepik</a></p>
+            <h4>About Us</h4>
+            <p><a href="https://www.freepik.com/free-vector/business-team-brainstorm-idea-lightbulb-from-jigsaw-working-team-collaboration-enterprise-cooperation-colleagues-mutual-assistance-concept-pinkish-coral-bluevector-isolated-illustration_11667116.htm#query=us&position=0&from_view=author&uuid=4b1e241d-05fe-4616-89e0-946f301db85a">Image by vectorjuice on Freepik</a></p>
+            <p><a href="https://www.freepik.com/free-vector/businessmen-climb-growth-column-graph-career-personality-development-careerbuilder-career-planning-progress-concept-white-background_11668453.htm#fromView=search&page=1&position=4&uuid=7adf6d6f-7e4d-42f2-ac3c-71f80c0d8d93">Image by vectorjuice on Freepik</a></p>
+            <h4>Book a Grind</h4>
+            <p><a href="https://www.freepik.com/free-vector/students-wearing-new-clothes-big-backpack-books-pencil-back-school-outfits-trends-new-school-year-fashion-first-day-school-clothes_12085830.htm#fromView=author&page=1&position=2&uuid=545ffade-0541-400e-9a61-7d4b721b17d2">Image by vectorjuice on Freepik</a></p>
+            <h4>FAQS</h4>
+            <p><a href="https://www.freepik.com/free-vector/self-management-life-coaching-man-doubting-questioning-brainstorming-identity-crisis-delirium-mental-confusion-confused-feelings-concept-pinkish-coral-bluevector-isolated-illustration_11664272.htm#query=faq&position=3&from_view=author&uuid=44056920-2a02-462f-a552-08bc20fd1c2b">Image by vectorjuice on Freepik</a></p>
+            <h4>Work with Us</h4>
+            <p>Header Image: Photo by <a href="https://unsplash.com/@homajob?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Scott Graham</a> on <a href="https://unsplash.com/photos/person-holding-pencil-near-laptop-computer-5fNmWej4tAA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>      
+            </article>
         </div>
-        <div class="buttons">
-            <a href="/Pages/Contact Us.html"><i class="bx bx-support"></i></a>
-            <a href="#"><i class="bx bx-basket"></i></a>
-            <a href="/Pages/Login Page/login.html"><i class="bx bxs-user"></i></a>
-        </div>
-    </nav>
 
-    <div class="container">
-        <header class="header2">
-          <div class="info">
-            <h3 class="title">Attributions to those whose Images I have used</h3>
-            <p>Thank you</p>
-          </div>
-        </header>
-        <article>
-          <!--<a href="http://www.freepik.com">Designed by vectorjuice / Freepik</a>-->
-          <h4>Home Page</h4>
-          <p><a href="https://www.freepik.com/free-photo/3d-student-graduation-cap-books-stack_33062162.htm#fromView=search&page=1&position=8&uuid=1c020893-f12a-4929-a0d9-84efbf711699">Image by upklyak on Freepik</a></p>
-          <p><a href="https://www.freepik.com/free-vector/goal-achievement-career-promotion-school-graduation-educational-trajectory-educational-capital-strategy-determine-your-educational-way-concept-pinkish-coral-bluevector-isolated-illustration_11663363.htm#query=learning&position=31&from_view=author&uuid=55285b5d-7482-40c2-ba5d-3039bf4c50f1">Image by vectorjuice on Freepik</a></p>
-          <h4>Blog</h4>
-          <p>Time Management: Photo by <a href="https://unsplash.com/@aronvisuals?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Aron Visuals</a> on <a href="https://unsplash.com/photos/selective-focus-photo-of-brown-and-blue-hourglass-on-stones-BXOXnQ26B7o?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
-          <p>Study: Photo by <a href="https://unsplash.com/@aaronburden?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Aaron Burden</a> on <a href="https://unsplash.com/photos/opened-book-QJDzYT_K8Xg?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
-          <p>Stress: Photo by <a href="https://unsplash.com/@punttim?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Tim Gouw</a> on <a href="https://unsplash.com/photos/man-wearing-white-top-using-macbook-1K9T5YiZ2WU?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
-          <p>Learning: Photo by <a href="https://unsplash.com/@fakurian?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Milad Fakurian</a> on <a href="https://unsplash.com/photos/blue-and-green-peacock-feather-58Z17lnVS4U?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
-          <h4>Contact Us</h4>
-          <p><a href="https://www.freepik.com/free-vector/contact-center-abstract-concept_12084824.htm#query=contact&position=1&from_view=author&uuid=d6363a94-f62e-43c1-a760-4aab21d42ee2">Image by vectorjuice on Freepik</a></p>
-          <h4>About Us</h4>
-          <p><a href="https://www.freepik.com/free-vector/business-team-brainstorm-idea-lightbulb-from-jigsaw-working-team-collaboration-enterprise-cooperation-colleagues-mutual-assistance-concept-pinkish-coral-bluevector-isolated-illustration_11667116.htm#query=us&position=0&from_view=author&uuid=4b1e241d-05fe-4616-89e0-946f301db85a">Image by vectorjuice on Freepik</a></p>
-          <p><a href="https://www.freepik.com/free-vector/businessmen-climb-growth-column-graph-career-personality-development-careerbuilder-career-planning-progress-concept-white-background_11668453.htm#fromView=search&page=1&position=4&uuid=7adf6d6f-7e4d-42f2-ac3c-71f80c0d8d93">Image by vectorjuice on Freepik</a></p>
-          <h4>FAQS</h4>
-          <p><a href="https://www.freepik.com/free-vector/self-management-life-coaching-man-doubting-questioning-brainstorming-identity-crisis-delirium-mental-confusion-confused-feelings-concept-pinkish-coral-bluevector-isolated-illustration_11664272.htm#query=faq&position=3&from_view=author&uuid=44056920-2a02-462f-a552-08bc20fd1c2b">Image by vectorjuice on Freepik</a></p>
-          <h4>Work with Us</h4>
-          <p>Header Image: Photo by <a href="https://unsplash.com/@homajob?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Scott Graham</a> on <a href="https://unsplash.com/photos/person-holding-pencil-near-laptop-computer-5fNmWej4tAA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>      
-        </article>
-      </div>
-
-    <footer>
-        <div class="columns">
-            <div class="col">
-                <h5>Contact Information</h5>
-                <ul class="contact_details">
-                    <li>
-                        <i class="bx bxs-phone"></i>
-                        <h5>+353 851193536</h5>
-                    </li>
-                    <li>
-                        <i class="bx bx-envelope"></i>
-                        <h5 class="email">eoghanmurphhy@gmail.com</h5>
-                    </li>
-                    <li>
-                        <i class="bx bx-map"></i>
-                        <h5>Blessington, Wicklow, Ireland</h5>
-                    </li>
-                </ul>
-                <a class="contactusfooter" href="/Pages/Contact Us.html">Contact Us</a>
-            </div>
-            <div class="col">
-                <h5>Site Links</h5>
-                <a href="/Pages/index.html">Home</a>
-                <a href="/Pages/About Us.html">About Us</a>
-                <a href="/Pages/Contact Us.html">Grinds</a>
-                <a href="/Pages/Courses.html">Courses</a>
-                <a href="/Pages/Blog Pages/Landing Page.html">Blog</a>
-            </div>
-            <div class="col">
-                <h5>Other Links</h5>
-                <a href="#">FAQS</a>
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms of Service</a>
-                <a href="#">Cookies</a>
-                <a href="#">Support</a>
-                <a href="#">Attributions</a>
-            </div>
-            <div class="col">
-                <h5>Collaboration</h5>
-                <a href="#">Work With Us</a>
-            </div>
-            <div class="col last">
-                <h5>Sign Up to Our Weekly Newsletter</h5>
-                <p>Hear about our latest Blog and Upcoming Courses/Events!</p>
-                <div class="form2">
-                    <form action="https://formspree.io/f/mjvndlpa" method="POST" class="contact__form2">
-                        <input type="email" name="Email Address" placeholder="Your Email Address" required />
-                        <button type="submit" class="btn btn-primary">Sign Up</button>
-                    </form>
-                </div>
-                <h5 class="Socialsfooter">Socials</h5>
-                <div class="social-links">
-                    <a href="#"><i class="bx bxl-instagram"></i></a>
-                    <a href="#"><i class="bx bxl-youtube"></i></a>
-                    <a href="#"><i class="bx bxl-linkedin-square"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="copyright">
-            <img src="/Assets/Images/GRINDS SCHOOL LOGO Final (1) crop.png">
-            <p>Copyright © 2024 Level Up Institute, All Rights Reserved.</p>
-        </div>
-    </footer>
-</body>
+        <div data-include="/Includes/Footer.html"></div>
+    </body>
 </html>
