--- a/Pages/About Us.html
+++ b/Pages/About Us.html
@@ -10,34 +10,12 @@
     <link rel="stylesheet" href="/Assets/CSS/AboutUs.css" />
     <link rel="stylesheet" href="/Assets/CSS/Homepage.css">
     <link rel="stylesheet" href="/Assets/CSS/Template.css" />
+    <script src="/JavaScript/include.js" defer></script> 
     <title>About Us | Level Up Institute</title>
   </head>
 
   <body>
-    <nav>
-      <div class="left">
-        <div class="logo">
-          <img src="/Assets/Images/GRINDS SCHOOL LOGO Final (1) crop.png" />
-        </div>
-        <div class="links">
-          <a href="/Pages/index.html">Home</a>
-          <a href="/Pages/Grinds.html">Grinds</a>
-          <a href="/Pages/Courses.html">Courses</a>
-          <a href="/Pages/Blog Pages/Blog Landing Page.html">Blog</a>
-          <a href="#">Youtube</a>
-          <a href="/Pages/About Us.html">About Us</a>
-          <a href="/Pages/Contact Us.html">Contact Us</a>
-        </div>
-      </div>
-
-      <div class="buttons">
-        <a href="/Other/Support.html"><i class="bx bx-support"></i></a>
-        <a href="#"><i class="bx bx-basket"></i></a>
-        <a href="/Pages/ASMR Prog - Login Page/login.html"
-          ><i class="bx bxs-user"></i
-        ></a>
-      </div>
-    </nav>
+    <div data-include="/Includes/nav.html"></div> 
 
     <section class="about__achievement">
       <div class="container_about__achievements_container">
@@ -49,14 +27,13 @@
         <div class="about__achievements-right">
           <h1>About Us</h1>
           <p>
-            Forming in September 2023, Level Up started as a means to help
-            people in Blessington, County Wicklow and the surrounding area with
-            Maths. Science is something we are passionate about, the goal of
+            Starting in September 2023, Level Up started as a means to help
+            people in Blessington, Wicklow and the surrounding area with
+            Maths and Science. Science is something we are passionate about, the goal of
             Level Up is to help other people in their respective journey in
             Maths and Science and spread our passion of to others!
             <a href="#"><i class="bx bxl-instagram"></i></a>
             <a href="#"><i class="bx bxl-youtube"></i></a>
-            <a href="#"><i class="bx bxl-linkedin-square"></i></a>
           </p>
           
           <h1 class="h1two">Achievements</h1>
@@ -76,7 +53,7 @@
                 <i class="bx bx-happy-beaming"></i>
               </span>
               <h3>High Satisfaction Rate</h3>
-              <p>We Strive to Make Sure our Students are Satisfied.</p>
+              <p>We Strive to Make Sure our Students feel Supported and Satisfied.</p>
             </article>
             <article class="achievement__card">
               <span class="achievement__icon">
@@ -94,17 +71,17 @@
               >See Our Reviews and Recommendations
               <i class="bx bx-chevron-right"></i
             ></a>
-            <a href="/Pages/Contact Us.html">Book a Grind Now!</a>
+            <a href="/Pages/congrind.html">Book a Grind Now!</a>
           </div>  
         </div>
       </div>
     </section>
 
-    <!--<section class="team">
+    <section class="team">
       <h2><span>Meet the Tutors!</span></h2>
       <div class="container_team__container">
         <article class="team__member">
-          <a href="/Pages/Contact Us.html">
+          <a href="/Pages/bookagrind.html">
             <div class="team__member-image">
               <img
                 src="/Assets/Images/Superprof profile pic 2 - Copy.jpg"
@@ -119,46 +96,15 @@
               <a href="https://instagram.com" target="_blank"
                 ><i class="bx bxl-instagram"></i
               ></a>
-              <a href="https://twitter.com" target="_blank"
+              <!-- <a href="https://twitter.com" target="_blank"
                 ><i class="bx bxl-twitter"></i
-              ></a>
-              <a href="https://linkedin.com" target="_blank"
-                ><i class="bx bxl-linkedin-square"></i
-              ></a>
-            </div>
-          </a>
-        </article>
-      </div>
-    </section> -->
-
-    <section class="team">
-      <h2><span>Meet the Tutors!</span></h2>
-      <div class="container_team__container">
-        <article class="team__member">
-          <a href="/Pages/Contact Us.html">
-            <div class="team__member-image">
-              <img
-                src="/Assets/Images/Superprof profile pic 2 - Copy.jpg"
-                alt=""
-              />
-            </div>
-            <div class="team__member-info">
-              <h4>Eóghan Murphy</h4>
-              <p>Experienced Tutor & Founder</p>
-            </div>
-            <div class="team__member-socials">
-              <a href="https://instagram.com" target="_blank"
-                ><i class="bx bxl-instagram"></i
-              ></a>
-              <a href="https://twitter.com" target="_blank"
-                ><i class="bx bxl-twitter"></i
-              ></a>
+              ></a> -->
               <a href="https://linkedin.com" target="_blank"
                 ><i class="bx bxl-linkedin-square"></i
               ></a>
             </div>
             <div class="Booknow">
-              <a href="/Pages/Contact Us.html">Book Now!</a>
+              <a href="/Pages/congrind.html">Book Now!</a>
             </div>
           </a>
         </article>
@@ -166,7 +112,7 @@
           <img src="/Assets/Images/Progress.jpg" alt="" />
           <p>Eóghan is a Physics Student and Entrance Scholar at UCD.</p>
           <p>
-            He recieved a H1 in Leaving Cert Maths and has recieved 'A' grades
+            He recieved a H1 in Leaving Cert Maths and has recieved 'A+' grades
             in University Level Maths and Physics Modules.
           </p>
           <p>
@@ -176,77 +122,6 @@
         </div>
       </div>
     </section>
-
-    <footer>
-      <div class="columns">
-        <div class="col">
-          <h5>Contact Information</h5>
-          <ul class="contact_details">
-            <li>
-              <i class="bx bxs-phone"></i>
-              <h5>+353 851193536</h5>
-            </li>
-            <li>
-              <i class="bx bx-envelope"></i>
-              <h5 class="email">eoghanmurphhy@gmail.com</h5>
-            </li>
-            <li>
-              <i class="bx bx-map"></i>
-              <h5>Blessington, Wicklow, Ireland</h5>
-            </li>
-          </ul>
-          <a class="contactusfooter" href="/Pages/Contact Us.html">Contact Us</a>
-        </div>
-        <div class="col">
-          <h5>Site Links</h5>
-          <a href="/Pages/index.html">Home</a>
-          <a href="/Pages/About Us.html">About Us</a>
-          <a href="/Pages/Contact Us.html">Grinds</a>
-          <a href="/Pages/Courses.html">Courses</a>
-          <a href="/Pages/Blog Pages/Landing Page.html">Blog</a>
-        </div>
-        <div class="col">
-          <h5>Other Links</h5>
-          <a href="#">FAQS</a>
-          <a href="#">Privacy Policy</a>
-          <a href="#">Terms of Service</a>
-          <a href="#">Cookies</a>
-          <a href="#">Support</a>
-        </div>
-        <div class="col">
-          <h5>Collaboration</h5>
-          <a href="#">Work With Us</a>
-          <a href="#">Affiliate</a>
-        </div>
-        <div class="col last">
-          <h5>Sign Up to Our Weekly Newsletter</h5>
-          <p>Hear about our latest Blog and Upcoming Courses/Events!</p>
-          <div class="form2">
-            <form
-          action="https://formspree.io/f/mjvndlpa"
-          method="POST"
-          class="contact__form2">
-          <input
-            type="email"
-            name="Email Address"
-            placeholder="Your Email Address"
-            required
-          />
-          <button type="submit" class="btn btn-primary">Sign Up</button>
-          </div>
-
-          <h5 class="Socialsfooter">Socials</h5>
-          <div class="social-links">
-            <a href="#"><i class="bx bxl-instagram"></i></a>
-            <a href="#"><i class="bx bxl-youtube"></i></a>
-            <a href="#"><i class="bx bxl-linkedin-square"></i></a>
-          </div>
-        </div>
-      </div>
-      <div class="copyright">
-        <img src="/Assets/Images/GRINDS SCHOOL LOGO Final (1) crop.png">
-        <p>Copyright © 2024 Level Up Institute, All Rights Reserved.</p>
-      </div>
-    </footer>
+    <div data-include="/Includes/Footer.html"></div>
   </body>
 </html>
