--- a/Pages/Login Page/login.html
+++ b/Pages/Login Page/login.html
@@ -9,7 +9,7 @@
     />
     <link rel="stylesheet" href="/Assets/CSS/Template.css" />
     <link rel="stylesheet" href="/Pages/Login Page/login.css" />
-    <title>Home | Level Up Institute</title>
+    <title>Login | Level Up Institute</title>
   </head>
 
   <body>
@@ -25,8 +25,8 @@
           <div class="social-icons">
             <a href="#" class="icon"><i class="bx bxl-google"></i></a>
             <a href="#" class="icon"><i class="bx bxl-microsoft"></i></a>
-            <a href="#" class="icon"><i class="bx bxl-meta"></i></a>
-            <a href="#" class="icon"><i class="bx bxl-linkedin"></i></a>
+            <!-- <a href="#" class="icon"><i class="bx bxl-meta"></i></a>
+            <a href="#" class="icon"><i class="bx bxl-linkedin"></i></a> -->
           </div>
           <span>or use your email for registration</span>
           <input type="text" placeholder="Name" />
@@ -41,8 +41,8 @@
           <div class="social-icons">
             <a href="#" class="icon"><i class="bx bxl-google"></i></a>
             <a href="#" class="icon"><i class="bx bxl-microsoft"></i></a>
-            <a href="#" class="icon"><i class="bx bxl-meta"></i></a>
-            <a href="#" class="icon"><i class="bx bxl-linkedin"></i></a>
+            <!-- <a href="#" class="icon"><i class="bx bxl-meta"></i></a>
+            <a href="#" class="icon"><i class="bx bxl-linkedin"></i></a> -->
           </div>
           <span>or use your email & password</span>
           <input type="email" placeholder="Email" />
